<resources>
    <string name="app_name" translatable="false">ZimRate</string>

    <string name="calc_amount">Amount</string>
    <string name="amount_info">Amount to Rate</string>

    <string translatable="false" name="currency_usd">USD</string>
    <string name="currency_bond" translatable="false">BOND</string>
    <string name="currency_rtgs" translatable="false">RTGS</string>
    <string name="currency_omir" translatable="false">OMIR</string>
    <string name="currency_rbz" translatable="false">RBZ</string>
    <string name="currency_zar" translatable="false">ZAR</string>

    <string name="preferred_currency">Preferred Currency Value</string>
    <string name="preferred_currency_summary">Fetch %s Value</string>

    <string name="preferred_mean">Mean</string>
    <string name="preferred_median">Median</string>
    <string name="preferred_random">Random</string>
    <string name="preferred_mode">Mode</string>
    <string name="preferred_min">Lowest</string>
    <string name="preferred_max">Highest</string>

    <string name="prefer_random" translatable="false">random</string>
    <string name="prefer_median" translatable="false">median</string>
    <string name="prefer_mode" translatable="false">mode</string>
    <string name="prefer_mean" translatable="false">mean</string>
    <string name="prefer_min" translatable="false">min</string>
    <string name="prefer_max" translatable="false">max</string>

    <string name="update_interval">Update Interval</string>
    <string name="update_hourly">Hourly</string>
    <string name="update_hour_two">Every Two Hours</string>
    <string name="update_hour_six">Every Six Hours</string>
    <string name="update_hour_twelve">Every Twelve Hours</string>
    <string name="update_daily">Daily</string>

    <string name="auto_update">Auto Update</string>
    <string name="auto_update_summary_on">Automatically update with received currency rates</string>
    <string name="auto_update_summary_off">Manually click update currency rates</string>

    <string name="auto_check">Check Updates</string>
    <string name="auto_check_summary_on">Automatically check for currency updates</string>
    <string name="auto_check_summary_off">Manually update currency rates</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_info">Tips</string>
    <string name="info_message">1. To refresh rates at any time, you can swipe from the top on this screen.\n\n2. You can also add a widget to your home screen to view last loaded rates without opening app. (Rates are not loaded in the background)\n\n3. You can instantly use the calculated result for further calculation by pressing the desired result.</string>
    <string name="info_dismiss">OK</string>
    <string name="about">About</string>
    <string name="author">Author</string>
    <string name="rates_source_title">Rates from</string>
    <string name="rates_source" translatable="false">http://zimrate.tyganeutronics.com/</string>

    <string name="author_name" translatable="false">Richard Muvirimi</string>
    <string name="author_email" translatable="false">rich4rdmuvirimi@gmail.com</string>
    <string name="author_email_link" translatable="false">mailto:rich4rdmuvirimi@gmail.com</string>
    <string name="author_url" translatable="false">https://richard.co.zw</string>

    <string name="app_version">Version %s</string>

    <string name="update_available">New Rates Available</string>
    <string name="update_apply">Apply</string>

    <string name="result" translatable="false">%1$s%2$,10.2f</string>
    <string translatable="false" name="current_rate">$1 USD =</string>

    <string name="ads_id" translatable="false">ca-app-pub-5305936235957258/6604376845</string>
    <string name="ads_app_id" translatable="false">ca-app-pub-5305936235957258~9422111874</string>

    <string name="license">Open source Licenses</string>

    <string name="rate_app">How would you rate this app?</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">Never</string>
    <string name="rate_submit">Submit</string>
    <string name="rate_submit_feedbak">Submit Feedback</string>
    <string name="rate_submit_prompt">Please tell where we can improve.</string>
    <string name="rate_cancel">Cancel</string>
    <string name="rate_email_failed">You have no email client. Please visit our website to submit feedback.</string>
    <string name="rate_site">Visit</string>
    <string name="rate_playstore">Would you like to rate us also on Playstore</string>
    <string name="rate_yes">Yes</string>
    <string name="rate_title">Rate this App</string>

    <string name="widget_add_desc">Select rate to add</string>
    <string name="widget_add">Add</string>

    <string name="prefs_misc">Miscellaneous</string>
    <string name="prefs_analytics_title">Analytics</string>
    <string name="prefs_analytics_on">Allow collection of anonymous usage statistics</string>
    <string name="prefs_analytics_off">Opt out of collection of anonymous usage statistics</string>

    <string name="playstore_market" translatable="false">market://details?id=%s</string>
    <string name="playstore_browser" translatable="false">https://play.google.com/store/apps/details?id=%s</string>

    <string name="calculator_answer">Ans</string>
    <string name="calculator_dialog_cancel">Cancel</string>
    <string name="calculator_dialog_clear">Clear</string>
    <string name="calculator_dialog_erase">Erase</string>
    <string name="calculator_dialog_ok">OK</string>

    <string-array name="calculator_dialog_errors">
        <item>Division by zero</item>
        <item>Out of bounds</item>
        <item>Result must be positive</item>
        <item>Result must be negative</item>
    </string-array>

    <string name="donate">Donate</string>
    <string name="donate_summary">Support this project with a donation</string>
    <string name="donate_link">https://www.buymeacoffee.com/fpjyrXk</string>

</resources>
