<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/menu_settings">

        <ListPreference
            android:defaultValue="max"
            android:entries="@array/preferred"
            android:entryValues="@array/preferred_values"
            android:icon="?attr/ic_dollar"
            android:key="preferred_currency"
            android:summary="@string/preferred_currency_summary"
            android:title="@string/preferred_currency" />

        <ListPreference
            android:entries="@array/update_interval"
            android:entryValues="@array/update_interval_values"
            android:icon="?attr/ic_interval"
            android:key="update_interval"
            android:summary="%s"
            android:title="@string/update_interval"
            app:defaultValue="1" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="?attr/ic_auto"
            android:key="auto_update"
            android:summaryOff="@string/auto_update_summary_off"
            android:summaryOn="@string/auto_update_summary_on"
            android:title="@string/auto_update" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="?attr/ic_check"
            android:key="check_update"
            android:summaryOff="@string/auto_check_summary_off"
            android:summaryOn="@string/auto_check_summary_on"
            android:title="@string/auto_check" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_misc">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="?attr/ic_analytics"
            android:key="analytics"
            android:summaryOff="@string/prefs_analytics_off"
            android:summaryOn="@string/prefs_analytics_on"
            android:title="@string/prefs_analytics_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/author">

        <Preference
            android:icon="@mipmap/ic_author"
            android:key="@string/pref_dev_name"
            android:summary="@string/pref_dev_brief"
            android:title="@string/pref_dev_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_dev_url" />
        </Preference>

        <Preference
            android:key="@string/pref_dev_url"
            android:summary="@string/pref_dev_url"
            app:iconSpaceReserved="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_dev_url" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:icon="@mipmap/ic_launcher"
            android:key="@string/pref_app_version"
            android:summary="@string/app_name"
            android:title="@string/pref_app_version" />

        <Preference
            android:key="@string/rates_source"
            android:summary="@string/rates_source"
            android:title="@string/rates_source_title"
            app:enableCopying="true"
            app:iconSpaceReserved="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/rates_source" />
        </Preference>

        <Preference
            android:key="@string/license"
            android:title="@string/license"
            app:iconSpaceReserved="true" />

    </PreferenceCategory>

</PreferenceScreen>