<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_border_primary_light"
    android:orientation="vertical"
    android:padding="@dimen/padding_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/padding_16"
            android:layout_height="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_4"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_border_primary_light"
        android:orientation="vertical"
        android:padding="@dimen/padding_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_usd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_usd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_bond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_bond" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_omir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_omir" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_rbz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_rbz" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_rtgs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_rtgs" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_zar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_4"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/currency_zar" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>