<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_rates"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_10dp"
    android:visibility="visible">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/current_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_bond_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_bond"
            app:counterMaxLength="@integer/maxvalue"
            app:helperTextTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/maxvalue" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/current_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_omir_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_omir"
            app:counterMaxLength="@integer/maxvalue"
            app:helperTextTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_omir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/maxvalue" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/current_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_rbz_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_rbz"
            app:counterMaxLength="@integer/maxvalue"
            app:helperTextTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rbz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/maxvalue" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/current_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_rtgs_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_rtgs"
            app:counterMaxLength="@integer/maxvalue"
            app:helperTextTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rtgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/maxvalue" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/current_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_rand_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_rand"
            app:counterMaxLength="@integer/maxvalue"
            app:helperTextTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/maxvalue" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>